Fix gaping issue & ui issue of post item

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -613,6 +613,14 @@ video {
   margin: 0px;
 }
 
+.m-2\.5 {
+  margin: 0.625rem;
+}
+
+.m-2 {
+  margin: 0.5rem;
+}
+
 .my-24 {
   margin-top: 6rem;
   margin-bottom: 6rem;
@@ -714,6 +722,14 @@ video {
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mt-2\.5 {
+  margin-top: 0.625rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .block {
