--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -309,6 +309,7 @@ Post comment
 .comments-area .comment-form textarea {
   padding: 7px 10px;
   outline: none;
+  margin-bottom: 12px;
 }
 .comments-area .comment-form .comment-form-author, .comments-area .comment-form .comment-form-email {
   float: left;
