--- a/assets/scss/_post.scss
+++ b/assets/scss/_post.scss
@@ -266,6 +266,8 @@ Post comment
     textarea {
       padding: 7px 10px;
       outline: none;
+      margin-bottom: 12px;
+      
     }
 
     .comment-form-author, .comment-form-email {
